# Balance-Board-Keybinds

./: CMakeLists.txt  README.md  about.md  mod.json  read.md
.github/workflows/: multi-platform.yml
include/: wiimote.h  wiimote_common.h
resources/: logo.psd
src/: BBKeybind.cpp  BBKeybind.hpp  BalanceBoard.cpp  BalanceBoard.hpp  main.cpp  wiimote.cpp
src/customGUI/: WeightPopup.cpp  WeightPopup.hpp  waitingLayer.cpp  waitingLayer.hpp
src/hooks/: MyMenu.cpp  MyMenu.hpp  menu.cpp  menu.hpp  playLayerCalibrate.cpp  playLayerCalibrate.hpp
src/utils/: BBDisconnectEvent.cpp  BBDisconnectEvent.hpp  weightUtils.hpp
